# practice-shaders-sfml

./: .gitignore  CMakeLists.txt  ReadMe.md
resources/: basic-shader.frag  psychedelic-shader.frag  ripple-shader.frag  scanline-shader.frag  shader.vert  wave-shader.frag
src/: main.cpp
